codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_surface_previews_no_sandbox_with_approval.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: "status_preview_line(&mut chat,\n&[StatusLineItem::Permissions, StatusLineItem::ApprovalMode],)"
---
No Sandbox · Ask for approval
